Update command lines

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(find_y_0.5)
 export(gen_kar_list)
 export(get_BALL_fusion)
 export(get_BALL_mutation)
+export(get_GEP_pred)
 export(get_PhenoGraphPred)
 export(get_PhenoGraphPreds)
 export(get_RNAseqCNV_plot)
@@ -80,6 +81,7 @@ export(run_countMatrix)
 export(run_countOnly)
 export(run_multiple_samples)
 export(run_multiple_umap)
+export(run_one_sample)
 export(run_shiny_MDALL)
 export(run_singleR)
 export(run_umap)
